added responsive query

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
             </ul>
         </nav>
         <div class="banner">
+          <div class="banner-content">
             <h1 class="banner-title">Brand New 
                 Group of Architects</h1>
-            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur iure inventore officiis nam sapiente ducimus.</p>    
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur iure inventore officiis nam sapiente ducimus.</p>   
+            <button class="btn-primary">Explore More</button> 
+          </div>
+            <img class="banner-img" src="assets/banner.png" alt="">
         </div>
     </header>
     <main>
