made a litle bit fact container

--- a/index.html
+++ b/index.html
@@ -29,7 +29,30 @@
         </div>
     </header>
     <main>
+        <!-- team section start -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="assets/team1.png" alt="two architect discussing">
+                <img src="assets/team2.png" alt="">
+                <img src="assets/team3.png" alt="">
+                <img src="assets/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ducimus blanditiis temporibus, quos quo ea!</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- feature will enjoy start-->
+         <section>
+            <h3 class=""></h3>
+         </section>
+         <!-- some facts start -->
+          <section>
+            <h3 class=".section-title">Some FActs</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, officiis?</p>
 
+          </section>
     </main>
     <footer>
 
