--- a/index.html
+++ b/index.html
@@ -49,8 +49,39 @@
          </section>
          <!-- some facts start -->
           <section>
-            <h3 class=".section-title">Some FActs</h3>
-            <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, officiis?</p>
+            <h3 class=".section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, officiis?</p>
+            <div class="facts-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="assets/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="assets/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                  <div>
+                    <img src="assets/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                  </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="assets/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+                    </div>
+            </div>
 
           </section>
     </main>
