--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
             </div>
 
           </section>
+          <!-- our sponsors start -->
+           <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="assets/sponsors/spotify.png" alt="">
+                <img src="assets/sponsors/amazon.png" alt="">
+                <img src="assets/sponsors/google.png" alt="">
+                <img src="assets/sponsors/telerama.png" alt="">
+                <img src="assets/sponsors/figma.png" alt="">
+            </div>
+           </section>
     </main>
     <footer>
 
