--- a/index.html
+++ b/index.html
@@ -44,8 +44,36 @@
             </div>
         </section>
         <!-- feature will enjoy start-->
-         <section>
-            <h3 class=""></h3>
+         <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div>
+                <img src="assets/architect.png" alt="">
+                <button class="btn-primary">
+                    <span id="experience-badge">10+ Year</span>
+                    <br>
+                    <span id="experience-year">Experience</span>
+                </button>
+            </div>
          </section>
          <!-- some facts start -->
           <section>
